添加示例页

--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "coffee-script": "^1.12.7",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "jstransformer-coffee-script": "^1.1.1",
+    "jstransformer-markdown-it": "^2.1.0",
     "morgan": "~1.9.0"
+  },
+  "devDependencies": {
+    "pug": "^2.0.3"
   }
 }
